# stl-viewer

./: .gitignore  history.txt  package.json
src/: App.svelte  Viewer.svelte  routes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/stl_library/: mod.rs
src/components/: File.svelte  FileViewer.svelte  FileViewerPage.svelte  Home.svelte  Library.svelte  Tag.svelte  ThreeDFile.svelte  Viewer.svelte
src/lib/: file.ts  scene.ts  stlloader.ts  viewer.ts
